# Walker-TienKung-URDF

./: README.md
walker_tienkung_description/: CMakeLists.txt  package.xml
walker_tienkung_description/launch/: display.launch.py  tiankung_display.launch.py
walker_tienkung_description/meshes/: ankle_pitch_l_link.STL  ankle_pitch_r_link.STL  ankle_roll_l_link.STL  ankle_roll_r_link.STL  elbow_pitch_l_link.STL  elbow_pitch_r_link.STL  hip_pitch_r_link.STL  hip_roll_r_link.STL  shoulder_pitch_l_link.STL  shoulder_pitch_r_link.STL  shoulder_roll_l_link.STL  shoulder_roll_r_link.STL  shoulder_yaw_l_link.STL  shoulder_yaw_r_link.STL
walker_tienkung_description/rviz/: urdf.rviz
walker_tienkung_description/urdf/: walker_tienkung.urdf
walker_tienkung_vv_description/: CMakeLists.txt  package.xml
walker_tienkung_vv_description/launch/: display.launch.py  tiankung_display.launch.py
walker_tienkung_vv_description/meshes/: ankle_pitch_l_link.STL  ankle_pitch_r_link.STL  ankle_roll_l_link.STL  ankle_roll_r_link.STL  elbow_pitch_l_link.STL  elbow_pitch_r_link.STL  hip_pitch_r_link.STL  hip_roll_l_link.STL  hip_roll_r_link.STL  shoulder_pitch_l_link.STL  shoulder_pitch_r_link.STL  shoulder_roll_l_link.STL  shoulder_roll_r_link.STL  shoulder_yaw_l_link.STL  shoulder_yaw_r_link.STL
walker_tienkung_vv_description/urdf/: walker_tienkung_vv.urdf  walker_tienkung_vv_urdf.csv
