<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>walker_tienkung_description</name>
  <version>1.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zz@todo.todo">zz</maintainer>
  <!-- <license>TODO: License declaration</license> -->
  <license>BSD 3-clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>urdf_launch</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
